# tillweb

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  webpack.config.js
assets/: styles.scss  tillweb.js
tillweb/: manage.py
tillweb/config/: asgi.py  conffile.py  context_processors.py  oidc.py  settings.py  settings_production.py  urls.py  views.py  wsgi.py
tillweb/templates/: base.html  breadcrumbs.html  form-field.html  form-horizontal.html  form.html  index.html
tillweb/templates/registration/: logged_out.html  login-fail.html  login.html  password-change.html  profile.html  userdetail.html  userlist.html
tillweb/utils/templatetags/: tillweb_utils.py
